# graph-merge

./: .gitignore  .gitmodules  README.md  cli.py  pyproject.toml  requirements.md
docs/: graph_schema.md
docs/superpowers/plans/: 2026-05-21-graph-merge-implementation.md
docs/superpowers/specs/: 2026-05-21-graph-merge-design.md
llm/: anthropic_client.py  client.py  gemini_client.py  openai_client.py  vertex_client.py
models/: config.py  types.py
pipeline/: checkout.py  diff.py  graph.py  mapper.py  pruning.py  render.py  runner.py
tests/: conftest.py
tests/contract/: test_graphify_output.py  test_llm_parsing.py
tests/fixtures/graphs/: after.json  before.json  dest.json
tests/fixtures/responses/: mapping_valid.json
tests/integration/: conftest.py  test_pipeline.py
tests/unit/: test_checkout.py  test_cli.py  test_diff.py  test_graph_loading.py  test_llm_client.py  test_pruning.py  test_render.py  test_runner.py  test_types.py
